# tov-solver.py

./: .gitignore  LICENSE  README.md  Taskfile.yaml  pyproject.toml  requirements.txt
.github/workflows/: pytest.yml
data/swrdp/: descriptor.txt
src/tov_solver/: main.py
src/tov_solver/domains/eos/: cli.py
src/tov_solver/domains/eos/hadronic/: swrdp_loader.py
src/tov_solver/domains/eos/mftqcd/: main.py  mftqcd.py
src/tov_solver/domains/eos/polytropes/: main.py
src/tov_solver/domains/tov/: cli.py
tests/: conftest.py  test_hadronic.py  test_merger.py  test_mftqcd.py
